extension_tests/invalid/syntaxErr/for/forKeyWordDooErr.wacc
# do typo

# Output;
# #syntax_error#

# Exit:
# 100

# Program

begin
    for (int i = 0; i < 5; i+1) doo
        skip
    done
end

